fix(ui): load complete screening latest state
